--- a/MPlayer/MainWindow.xaml
+++ b/MPlayer/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MPlayer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MPlayer" Height="450" Width="800">
     <Grid>
         <ListBox x:Name="listbox1" Margin="0,0,0,80" SelectionChanged="listbox1_SelectionChanged">
 
